--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
           </div> -->
           <br>
           <!-- Masthead Subheading-->
-          <p class="masthead-subheading font-weight-light mb-0">
+          <p class="masthead-subheading font-weight-light mb-4">
             MBA Candidate @ Chicago Booth
           </p>
-          <br>
           <p class="masthead-subheading font-weight-light mb-0">
+            <a href="https://cvwang.github.io/"><img src="res/world-wide-web.png" width="30" height="30"/></a>
             <a href="https://www.linkedin.com/in/cvwang"><img src="res/linkedin.png" width="30" height="30"/></a>
             <a href="https://github.com/cvwang/"><img src="res/github.png" width="30" height="30"/></a>
             <a href="res/Charles Wang Resume.pdf"><img src="res/resume.png" width="30" height="30"/></a>
