add twitter link

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           <p class="masthead-subheading font-weight-light mb-0">
             <a href="https://cvwang.github.io/"><img src="res/world-wide-web.png" width="30" height="30"/></a>
             <a href="https://www.linkedin.com/in/cvwang"><img src="res/linkedin.png" width="30" height="30"/></a>
+            <a href="https://twitter.com/cvwangsf"><img src="res/twitter.png" width="30" height="30"/></a>
             <a href="https://github.com/cvwang/"><img src="res/github.png" width="30" height="30"/></a>
             <a href="res/Charles Wang Resume.pdf"><img src="res/resume.png" width="30" height="30"/></a>
           </p>
