--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="row">
           <div class="col-lg-8 offset-lg-2">
             <!-- <p><h4><u>Computer Science Engineering Undergraduate @ The University of Michigan</u></h4></p> -->
-            <p>Computer Science Engineering Undergraduate @ The University of Michigan</p>
+            <p>Computer Science Engineering Undergraduate</p>
             <p><strong>Projects</strong></p>
             <ul>
               <li> Twerating - Implemented Machine Learning techniques to tackle the sentiment analysis problem. Our team developed a movie rating system that pools and processes Twitter tweets to provide a truly accurate and unbiased movie rating. <a href="res/ml_paper.pdf">Paper</a> and <a href="res/ml_poster.pdf">poster</a>.</li>
