--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <br>
           <!-- Masthead Subheading-->
           <p class="masthead-subheading font-weight-light mb-4">
-            MBA Candidate @ Chicago Booth
+            Principal @ Good AI Capital
           </p>
           <p class="masthead-subheading font-weight-light mb-0">
             <a href="https://cvwang.github.io/"><img src="res/world-wide-web.png" width="30" height="30"/></a>
